Thu Mar 26 09:10:23 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/testing_object_reference_traits.hpp:
        * tests/Sequence_Unit_Tests/testing_string_traits.hpp:
          Fixed compile errors with HPUX

Thu Mar 26 08:52:23 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/bounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/string_sequence_element_ut.cpp:
        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
        * tests/Sequence_Unit_Tests/unbounded_string_sequence_ut.cpp:
          Only test wchar when it is available

Wed Mar 25 02:49:23 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/Sequence_Unit_Tests/bounded_object_reference_sequence_ut.cpp:

          Fixed a few cases where the expected state of the
          default-constructed sequence was incorrect.
          This is related to the change in
          Fri Jun  8 19:23:45 UTC 2007  Adam Mitz  <mitza@ociweb.com>

Tue Mar 24 19:46:00 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3567_Regression/client.cpp:
          Refactoring in preparation of upcoming AMI changes.

Tue Mar 24 16:41:18 UTC 2009  Joe Hoffert  <jhoffert@dre.vanderbilt.edu>

        * tao/Valuetype/Bounded_Valuetype_Sequence_T.h
        * tao/Valuetype/Unbounded_Valuetype_Sequence_T.h
          Adding iterators that support memory management.

Tue Mar 24 07:03:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Iterators/Bounded_String.cpp
        * tests/Sequence_Iterators/StringSeq.cpp
        * tests/Sequence_Iterators/Unbounded_Objectref.cpp
        * tests/Sequence_Iterators/Unbounded_Value.cpp
          Disable more code when stl iterators are disabled

Tue Mar 24 06:43:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added new IDL_Inherited_Operation and the sequence unit tests
          are not using boost anymore
