@@ -1,3 +1,8 @@
+Thu Mar 26 13:21:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Bug_3567_Regression/client.cpp:
+          Resolved compiler warning.
+
 Thu Mar 26 09:10:23 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Sequence_Unit_Tests/testing_object_reference_traits.hpp:
